[project]
name = "clts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "einops>=0.8.1",
    "h5py>=3.14.0",
    "hf-xet==1.1.5",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "modal>=1.1.4",
    "nnsight>=0.5.3",
    "numpy>=2.3.2",
    "pytest>=8.4.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
    ignore = [
        "F722", # Ignore typehint errors for jaxtyping  
    ]